--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
+    "aws-sdk": "^2.948.0",
     "discord.js": "^12.4.1",
     "ffmpeg-static": "^4.2.7",
     "googleapis": "^82.0.0"
