--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "aws-sdk": "^2.948.0",
+    "cool-ascii-faces": "^1.3.4",
     "discord.js": "^12.4.1",
     "ffmpeg-static": "^4.2.7",
     "googleapis": "^82.0.0"
